exports[`directionalProperty properly applies a value when passed only one 1`] = `
Object {
  "borderBottom": "12px",
  "borderLeft": "12px",
  "borderRight": "12px",
  "borderTop": "12px",
}
`;

exports[`directionalProperty properly applies values when passed four 1`] = `
Object {
  "borderBottom": "36px",
  "borderLeft": "48px",
  "borderRight": "24px",
  "borderTop": "12px",
}
`;

exports[`directionalProperty properly applies values when passed three 1`] = `
Object {
  "borderBottom": "36px",
  "borderLeft": "24px",
  "borderRight": "24px",
  "borderTop": "12px",
}
`;

exports[`directionalProperty properly applies values when passed two 1`] = `
Object {
  "borderBottom": "12px",
  "borderLeft": "24px",
  "borderRight": "24px",
  "borderTop": "12px",
}
`;

exports[`directionalProperty properly generates properties when passed a camelCased property 1`] = `
Object {
  "borderBottomWidth": "12px",
  "borderLeftWidth": "12px",
  "borderRightWidth": "12px",
  "borderTopWidth": "12px",
}
`;

exports[`directionalProperty properly generates properties when passed a hyphenated property 1`] = `
Object {
  "borderBottomWidth": "12px",
  "borderLeftWidth": "12px",
  "borderRightWidth": "12px",
  "borderTopWidth": "12px",
}
`;

exports[`directionalProperty properly passes just the position when not given a property 1`] = `
Object {
  "bottom": "12px",
  "left": "12px",
  "right": "12px",
  "top": "12px",
}
`;

exports[`directionalProperty properly skips bottom property when last value is null 1`] = `
Object {
  "borderLeft": "24px",
  "borderRight": "24px",
  "borderTop": "12px",
}
`;

exports[`directionalProperty properly skips bottom property when third value is null 1`] = `
Object {
  "borderLeft": "48px",
  "borderRight": "24px",
  "borderTop": "12px",
}
`;

exports[`directionalProperty properly skips left and right properties when second value is null 1`] = `
Object {
  "borderBottom": "12px",
  "borderTop": "12px",
}
`;

exports[`directionalProperty properly skips left property when fourth value is null 1`] = `
Object {
  "borderBottom": "36px",
  "borderRight": "24px",
  "borderTop": "12px",
}
`;

exports[`directionalProperty properly skips right and left properties when second value is null 1`] = `
Object {
  "borderBottom": "36px",
  "borderTop": "12px",
}
`;

exports[`directionalProperty properly skips right property when second value is null 1`] = `
Object {
  "borderBottom": "36px",
  "borderLeft": "48px",
  "borderTop": "12px",
}
`;

exports[`directionalProperty properly skips top and bottom properties when first value is null 1`] = `
Object {
  "borderLeft": "12px",
  "borderRight": "12px",
}
`;

exports[`directionalProperty properly skips top property when first value is null 1`] = `
Object {
  "borderBottom": "36px",
  "borderLeft": "24px",
  "borderRight": "24px",
}
`;

exports[`directionalProperty properly skips top property when first value is null 2`] = `
Object {
  "borderBottom": "36px",
  "borderLeft": "48px",
  "borderRight": "24px",
}
`;
